init/kube/dashboard-ingress.yaml
# ------------------- Execute AFTER: ------------------- #
# kubectl create -f https://raw.githubusercontent.com/kubernetes/dashboard/v1.10.1/src/deploy/recommended/kubernetes-dashboard.yaml
# ------------------- Dashboard Ingress ------------------- #
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.org/ssl-services: kubernetes-dashboard
  namespace: kube-system
spec:
  tls: []
  rules:
  - host: kubernetes-dashboard.domain.net
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 8443
