init/kube/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-dns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: jenkins.domain.net
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
